adding instructions on how to use the website

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <script src="scripts/main.js"></script>
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header"></header>
+    <header class="header">
+      <div class="logo-container">
+        <img src="img/logo.png" alt="logo" />
+      </div>
+      <p class="instructions">Instruções</p>
+    </header>
 
+    <main class="wrapper">
       <div class="img-container">
         <img class="img pandeiro" src="img/pandeiro-pb.svg" alt="Pandeiro" />
       </div>
@@ -47,6 +52,18 @@
             <p class="btn__text">P</p>
           </div>
         </div>
+      </div>
+    </main>
+
+    <div class="modal">
+      <div class="modal-container">
+        <h3>Intruções</h3>
+        <p>GA - Grave com a pele abafada</p>
+        <p>G - Grave</p>
+        <p>T - Tapa</p>
+        <p>R - Rulo</p>
+        <p>P - Platinelas</p>
+        <p class="exit">X</p>
       </div>
     </div>
 
