trying to use mp3 since wav is taking too long to play at phones

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     </div>
 
     <section class="audios">
-      <audio data-key="68" src="sounds/grave-abafado.wav"></audio>
-      <audio data-key="70" src="sounds/grave.wav"></audio>
-      <audio data-key="74" src="sounds/platinela.wav"></audio>
-      <audio data-key="75" src="sounds/platinela.wav"></audio>
-      <audio data-key="85" src="sounds/tapa.wav"></audio>
-      <audio data-key="73" src="sounds/rulo.wav"></audio>
+      <audio data-key="68" src="sounds/grave-abafado.mp3"></audio>
+      <audio data-key="70" src="sounds/grave.mp3"></audio>
+      <audio data-key="74" src="sounds/platinela.mp3"></audio>
+      <audio data-key="75" src="sounds/platinela.mp3"></audio>
+      <audio data-key="85" src="sounds/tapa.mp3"></audio>
+      <audio data-key="73" src="sounds/rulo.mp3"></audio>
     </section>
   </body>
 </html>
