--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=415px" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>virtualPandeiro</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap"
