--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=415px" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3"
+    />
     <title>virtualPandeiro</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap"
